# upstage-network-lecture

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  upstage-network-chanjin.pem
.github/workflows/: deploy-ec2.yml  deploy-release.yml
app/: deps.py
app/api/route/: user_routers.py
app/core/: db.py
app/repository/: user_repo.py
infra/chroma/: docker-compose.yml
infra/deploy/: .env.example  docker-compose.yml
